--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,16 @@
-spring:
-  application:
-    name: trycatch
+server:
+  port: 10000
+
+trycatch:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/spring?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+    username: TRY-CATCH
+    password: 1234
+
+mybatis:
+  configuration:
+  map-underscore-to-camel-case: true
+  mapper-locations: classpath*:/mapper/*.xml
+  type-aliases-package: com.app.trycatch.domain; com.app.trycatch.dto;
+  type-handlers-package: com.app.trycatch.mybatis.handler
